<resources>
    <string name="app_name">Journal manager</string>
    <string name="title_hint">Title</string>
    <string name="is_empty_message">It\'s empty here</string>
    <string name="search_action_title">Search</string>
    <string name="save_journal_title">Save journal</string>
    <string name="delete_journal_title">Delete journal</string>
    <string name="delete_all_title">Delete all</string>
    <string name="show_about_title">About</string>
    <string name="create_journal_dialog_hint">New journal</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="journal_create_success_message">New journal has been added: %1$s</string>
    <string name="page_create_success_message">New page has been added: %1$s</string>
    <string name="all_journals_deleted_message">All journals has been deleted</string>
    <string name="journal_update_failure_message">Failed to update \"%1$s\" journal</string>
    <string name="journal_update_success_message">Journal \"%1$s\" has been successfully updated</string>
    <string name="journal_delete_failure_message">Failed to delete the \"%1$s\" journal</string>
    <string name="journal_delete_success_message">Journal \"%1$s\" has been deleted</string>
    <string name="page_delete_success_message">Page \"%1$s\" has been deleted</string>
    <string name="selected_journals_delete_message">Journals deleted: %1$d</string>
    <string name="nothing_found_message">Nothing found</string>
    <string name="selected_count">Selected: %1$d</string>
    <string name="select_all_title">All</string>
    <string name="add_page_title">Add new page</string>
    <string name="page_one_default_title">Page 1</string>
    <string name="create_page_dialog_hint">New page</string>
    <string name="delete_page_title">Delete</string>
    <string name="rename_page_title">Rename</string>
    <string name="create_journal_fab_label">Create journal</string>
    <string name="delete_journals_confirm_title">Delete journals?</string>
    <string name="delete_selected_confirm_message">Selected journals (%1$d) will be permanently deleted.</string>
    <string name="delete_all_confirm_message">All journals will be permanently deleted.</string>
    <string name="delete_this_journal_confirm_title">Delete this journal?</string>
    <string name="delete_journal_confirm_message">This action cannot be undone.</string>
    <string name="delete_page_confirm_title">Delete page?</string>
    <string name="delete_page_confirm_message">This action cannot be undone.</string>
</resources>
