<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_page"
        android:icon="@drawable/ic_add"
        android:title="@string/add_page_title"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/save_journal"
        android:enabled="false"
        android:icon="@drawable/ic_save"
        android:title="@string/save_journal_title"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_journal"
        android:enabled="true"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_journal_title"
        android:visible="true"
        app:showAsAction="never" />
</menu>